# AStock-AI-Agent

./: .env.example  .gitignore  README.md  deploy.sh  push.sh  requirements-web.txt  restart.sh
cli/: analytics.py  chat.py  decision_tracker.py  main.py  memory_tools.py  portfolio.py  portfolio_analyzer.py  utils.py
mcp-server/: README.md  pyproject.toml  server.py
tradingagents/: default_config.py
tradingagents/agents/analysts/: china_market_analyst.py  fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/consolidation/: consolidation_analyst.py
tradingagents/agents/managers/: research_manager.py  risk_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/chatbot/: __init__.py  config.py  enhanced_chat.py  graph.py  simple_chat.py
tradingagents/config/: config_manager.py
tradingagents/dataflows/: akshare_utils.py  cache_manager.py  db_cache_manager.py  interface.py  logging_config.py  retry_utils.py  tdx_utils.py  tushare_utils.py
tradingagents/graph/: __init__.py  llm_factory.py  propagation.py  setup.py  tool_nodes_factory.py  trading_graph.py
tradingagents/llm_adapters/: __init__.py  deepseek_reasoner_adapter.py  openai_responses_adapter.py
tradingagents/utils/: __init__.py
web/: chat_app.py
web-app/: .env.example  docker-compose.yml
web-app/backend/: Dockerfile  requirements.txt
web-app/config/: access_codes.json  models.json  pricing.json
web-app/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
(+80 files in other folders)
