[project]
name = "a-share-analyzer-mcp"
version = "1.0.0"
description = "A股智能分析 MCP Server - 为 Claude Desktop 提供个股深度分析能力"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
a-share-analyzer = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
